# sunbeam-deployer

./: .gitignore  AGENTS.md  AGENTS_GUIDE.md  README.md  config.example.yaml  pyproject.toml  tox.ini
sunbeam_deployer/: __init__.py  __main__.py  cli.py  commands.py  config.py  executor.py  logger.py  monitor.py
sunbeam_deployer/phases/: cluster.py  host_setup.py  testflinger.py  vm_deploy.py
sunbeam_deployer/scripts/: host-setup.sh
tests/: test_cli.py  test_cluster.py  test_config.py  test_executor.py  test_logger.py  test_monitor.py  test_testflinger.py
