[project]
name = "sunbeam-deploy-bot"
version = "0.1.0"
description = "Automated Sunbeam (Canonical OpenStack) deployment on Testflinger machines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
sunbeam-deployer = "sunbeam_deployer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sunbeam_deployer"]
