[project]
name = "sunbeam-deploy-bot"
version = "0.1.0"
description = "Automated Sunbeam (Canonical OpenStack) deployment on Testflinger machines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
sunbeam-deployer = "sunbeam_deployer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sunbeam_deployer"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "tox>=4.0",
    "tox-uv>=1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["sunbeam_deployer"]
